# Minah

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  package-lock.json  package.json  requirements.txt  requirements_no_tf.txt
aegis/: Dockerfile  docker-compose.yml  pyproject.toml
aegis/api/: main.py
aegis/dashboard/: app.py
aegis/dashboard/pages/: alpha.py  overview.py  risk.py  trades.py
aegis/grafana/provisioning/dashboards/: dashboard.json
aegis/monitoring/: metrics_collector.py
benchmarks/: execution_engine_benchmark.py
examples/: abm_simulation.py
python/pyquant/: train.py  train_hybrid.py
python/pyquant/configs/: train_config.yaml
python/pyquant/data/: dataset.py
python/pyquant/features/: gaf_transforms.py
python/pyquant/models/: hybrid_transformer.py  transformer_model.py
python/pyquant/utils/: metrics.py
src/abm/: __init__.py
src/abm/agents/: base_agent.py  market_maker.py  trend_follower.py
src/abm/backtest/: __init__.py  data.py  engine.py  ml_backtester.py  results.py  strategies.py
src/abm/data/: README.md  __init__.py  config.py  connector.py  pipeline.py  utils.py  validation.py
src/abm/execution/: __init__.py  engine.py  optimized_engine.py
src/abm/execution/algorithms/: __init__.py  iceberg.py  twap.py  vwap.py
src/abm/features/: __init__.py  pipeline.py  transformers.py  utils.py
src/abm/interfaces/: __init__.py  order_book.py
src/abm/ml/: ensemble.py  models.py  regime_detection.py  regime_detector.py  uncertainty.py  weighting.py
src/abm/ml/rl/: __init__.py  agents.py  environment.py  replay_buffer.py  utils.py
src/abm/ml/rl/sota_2025/: decision_transformer.py  dreamerv3.py  ppo_mamba.py
src/abm/models/: market_environment.py
src/abm/risk/: manager.py
src/blockchain/: README.md
src/blockchain/adapters/: HyperliquidAdapter.cpp  HyperliquidAdapter.h
src/blockchain/connectors/: BlockchainNodeConnector.h  BlockchainNodeConnectorFactory.cpp  WebSocketBlockchainConnector.cpp  WebSocketBlockchainConnector.h
src/blockchain/pipeline/: WebSocketDataPipeline.cpp  WebSocketDataPipeline.h
src/blockchain/utils/: Utils.h
tests/: blockchain_integration_test.cpp  conftest.py  test_backtest_benchmarks.py  test_backtest_engine.py  test_simple_backtest.py
tests/integration/: test_trading_system.py
tests/performance/: test_latency.py
tests/scenarios/: test_stress_conditions.py
tests/unit/: test_order_book.py
